--- a/public/themes/simpleboot3/portal/about.html
+++ b/public/themes/simpleboot3/portal/about.html
@@ -279,7 +279,7 @@
 											</li>
 											<li class="name">
 												<div class="circular"></div>
-												<div><span>08-08</span>华劳人力资源有限公司上海分公司 成立</div>
+												<div><span>08-08</span>华劳人力资源有限公司山东分公司 成立</div>
 											</li>
 											<li class="name">
 												<div class="circular"></div>
@@ -374,7 +374,7 @@
 											</li>
 											<li class="name">
 												<div class="circular"></div>
-												<div><span>11-17</span>上海华劳科技有限公司成立</div>
+												<div><span>11-17</span>山东华劳科技有限公司成立</div>
 											</li>
 											<li class="name">
 												<div class="circular"></div>
@@ -684,7 +684,7 @@
 									追忆昨天：当年初中还没毕业的我走出河北吴桥农村，只身一人来到德州。在没有学历、没有背景、没有经验、没有资本的艰难困境下，凭借自己差异化的思维于2007年11月创办了华劳集团旗下的第一个全资子公司即山东华劳人力资源有限公司。当时正值《劳动合同法》的颁布实施，新的用工模式——劳务派遣的派生，让我们拥有了平生第一个客户，即天津嘉成木业有限公司（至今我们还在合作），它是我的生命中以及年轻华劳的贵人，在此衷心的感谢嘉成的李总以及人力资源部周经理，没有你们昔日的帮助支持就不会有华劳的今天。
 								</p>
 								<p>
-									拥抱今天：15年的砥砺前行，华劳集团已经在人力资源，政务外包，保险代理，劳务分包四个板块取得骄人的经营业绩。发展成为山东地区最具影响力的人力资源服务与保险服务供应商。各板块业务在各自领域内为客户提供了卓有成效的服务，赢得了客户的普遍赞誉。
+									拥抱今天：12年的砥砺前行，华劳集团已经在人力资源，政务外包，保险代理，劳务分包四个板块取得骄人的经营业绩。发展成为山东地区最具影响力的人力资源服务与保险服务供应商。各板块业务在各自领域内为客户提供了卓有成效的服务，赢得了客户的普遍赞誉。
 								</p>
 								<p>珍视明天：所有的成就与光环只能代表过去，追求无极限永远在路上，我们将继续秉承着“自强不息，拥抱变化”的华劳精神，砥砺前行、撸起袖子加油干，谱写“百年华劳、国际华劳”跨世纪发展的新篇章。</p>
 								<p>
