--- a/public/themes/simpleboot3/portal/app.html
+++ b/public/themes/simpleboot3/portal/app.html
@@ -9,10 +9,10 @@
     <link href="__TMPL__/public/assets/static/css/animate.css" rel="stylesheet" type="text/css" media="all">
     <link href="__TMPL__/public/assets/static/css/swiper.css" rel="stylesheet" type="text/css" media="all">
     <link href="__TMPL__/public/assets/static/css/baguettebox.min.css" rel="stylesheet" type="text/css" media="all">
-    <title>上海app开发商_app外包开发_上海app外包公司 - 上海真略</title>
-    <meta name="keywords" content="上海app开发商_app外包开发_上海app外包公司">
+    <title>山东app开发商_app外包开发_山东app外包公司 - 德州一帆</title>
+    <meta name="keywords" content="山东app开发商_app外包开发_山东app外包公司">
     <meta name="description"
-        content="上海真略科技app定制开发商专业开发IOS、android APP软件,为客户提供一站式APP外包开发解决方案,上海app外包公司领头企业,上海app开发制作就选上海真略科技!">
+        content="德州一帆科技app定制开发商专业开发IOS、android APP软件,为客户提供一站式APP外包开发解决方案,山东app外包公司领头企业,山东app开发制作就选德州一帆科技!">
     <!--[if lt IE 9]>
  <script src="__TMPL__/public/assets/static/js/html5shiv.min.js"></script>
  <script src="__TMPL__/public/assets/static/js/respond.min.js"></script>
@@ -88,7 +88,7 @@
                         </div>
                         <div class="scrCon">
                             <h3><em>3.</em>改策划哪些功能？</h3>
-                            <p>功能是该大而全，还是一期精准定位，小步快跑，快速迭代？真略科技多维度去帮您把控风险。</p>
+                            <p>功能是该大而全，还是一期精准定位，小步快跑，快速迭代？一帆科技多维度去帮您把控风险。</p>
                             <a href="javascript:void(0)" class="btns btn_app">APP技术选型</a>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                         </div>
                         <div class="scrCon">
                             <h3><em>3.</em>改策划哪些功能？</h3>
-                            <p>功能是该大而全，还是一期精准定位，小步快跑，快速迭代？真略科技多维度去帮您把控风险。</p>
+                            <p>功能是该大而全，还是一期精准定位，小步快跑，快速迭代？一帆科技多维度去帮您把控风险。</p>
                             <a href="javascript:void(0)" class="btns btn_app">APP技术选型</a>
                         </div>
                     </div>
@@ -170,7 +170,7 @@
                         </div>
                         <div class="scrCon">
                             <h3><em>3.</em>改策划哪些功能？</h3>
-                            <p>功能是该大而全，还是一期精准定位，小步快跑，快速迭代？真略科技多维度去帮您把控风险。</p>
+                            <p>功能是该大而全，还是一期精准定位，小步快跑，快速迭代？一帆科技多维度去帮您把控风险。</p>
                             <a href="javascript:void(0)" class="btns btn_app">APP技术选型</a>
                         </div>
                     </div>
@@ -211,7 +211,7 @@
                         </div>
                         <div class="scrCon">
                             <h3><em>3.</em>改策划哪些功能？</h3>
-                            <p>功能是该大而全，还是一期精准定位，小步快跑，快速迭代？真略科技多维度去帮您把控风险。</p>
+                            <p>功能是该大而全，还是一期精准定位，小步快跑，快速迭代？一帆科技多维度去帮您把控风险。</p>
                             <a href="javascript:void(0)" class="btns btn_app">APP技术选型</a>
                         </div>
                     </div>
@@ -680,8 +680,8 @@
     <div class="slider_nav">
         <ul>
             <li class="ht">
-                <div class="ht1"><img src="__TMPL__/public/assets/static/picture/silder1.png" alt="上海APP开发400电话">
-                    <div class="ht2">18952265600</div>
+                <div class="ht1"><img src="__TMPL__/public/assets/static/picture/silder1.png" alt="山东APP开发400电话">
+                    <div class="ht2">13792208163</div>
                 </div>
             </li>
             <!--<li><a href="http://wpa.qq.com/msgrd?v=3&uin=603233758&site=qq&menu=yes" target="_blank"><img src="/templates/main/images/silder2.png" alt="QQ在线咨询"/></a></li>-->
@@ -689,7 +689,7 @@
                         alt="咨询项目经理"></a></li>
             <li class="wx">
                 <img src="__TMPL__/public/assets/static/picture/silder4.png">
-                <div class="code"><img src="__TMPL__/public/assets/static/picture/code1.png" alt="上海APP开发微信公众号"></div>
+                <div class="code"><img src="__TMPL__/public/assets/static/picture/code1.png" alt="山东APP开发微信公众号"></div>
             </li>
         </ul>
     </div>
