--- a/public/themes/simpleboot3/portal/index_bak.html
+++ b/public/themes/simpleboot3/portal/index_bak.html
@@ -12,7 +12,7 @@
     <div class="index">
         <div class="index-banner index-banner-top">
             <div class="index-banner-box">
-                <div class="title">15年深耕人力资源服务业</div>
+                <div class="title">12年深耕人力资源服务业</div>
                 <div class="text">服务上市公司29家和超千人企业83家</div>
             </div>
         </div>
@@ -123,9 +123,10 @@
                             <ul>
                                 <li class="active">
                                     <div class="text">
-                                        华劳集团拥有15年规模用工企业服务经验，累计服务企业客户3000+家，服务满意度高达99.8%，累计服务上岗员工50余万人。
+                                        华劳集团拥有12年规模用工企业服务经验，累计服务企业客户3000+家，服务满意度高达99.8%，累计服务上岗员工50余万人。
                                     </div>
-                                    <div class="text">华劳集团拥有近百名丰富经验的招聘团队、新媒体运营团队、大量优质招聘渠道供应商、原生“华劳网”蓝领招聘APP和“刷活”灵活用工平台，具有极强的招聘交付能力。
+                                    <div class="text">
+                                        华劳集团拥有近百名丰富经验的招聘团队、新媒体运营团队、大量优质招聘渠道供应商、原生“华劳网”蓝领招聘APP和“刷活”灵活用工平台，具有极强的招聘交付能力。
                                     </div>
                                     <div class="company-name">合作客户</div>
                                     <div class="flex-box">
@@ -136,7 +137,7 @@
                                 </li>
                                 <li>
                                     <div class="text">
-                                        华劳集团始终以客户为中心，为客户提供极具价值的产品和服务为理念，凭借15年业务专长，专注于企业规范用工模式的探索与研发，为客户提供一站式人力资源综合解决方案。
+                                        华劳集团始终以客户为中心，为客户提供极具价值的产品和服务为理念，凭借12年业务专长，专注于企业规范用工模式的探索与研发，为客户提供一站式人力资源综合解决方案。
                                     </div>
                                     <div class="text">华劳集团目前服务客户累计已达3000余家，安置就业人员50余万人，为促进就业，构建和谐社会，建立新型劳动关系作出巨大贡献。
                                     </div>
@@ -151,7 +152,8 @@
                                     <div class="text">
                                         一站式解决企业全国员工人事办理难题，全国170+直营分/子公司，可满足全国范围内员工人事办理服务。助力企业轻资产运营，为企业减负，优化企业管理中的人员、固定资产投入等成本。
                                     </div>
-                                    <div class="text">1000+名优质服务团队24小时为您服务，线上智慧业务办理系统一键直达，更直观高效。强大的资金保障，专业化、平台化的一站式薪资发放体系更直观、资金往来更有保障。
+                                    <div class="text">
+                                        1000+名优质服务团队24小时为您服务，线上智慧业务办理系统一键直达，更直观高效。强大的资金保障，专业化、平台化的一站式薪资发放体系更直观、资金往来更有保障。
                                     </div>
                                     <div class="company-name">合作客户</div>
                                     <div class="flex-box">
@@ -162,7 +164,7 @@
                                 </li>
                                 <li>
                                     <div class="text">
-                                        华劳集团始终以客户为中心，为客户提供极具价值的产品和服务为理念，凭借15年业务专长，专注于企业规范用工模式的探索与研发，为客户提供一站式人力资源综合解决方案。
+                                        华劳集团始终以客户为中心，为客户提供极具价值的产品和服务为理念，凭借12年业务专长，专注于企业规范用工模式的探索与研发，为客户提供一站式人力资源综合解决方案。
                                     </div>
                                     <div class="text">华劳集团目前服务客户累计已达3000余家，安置就业人员50余万人，为促进就业，构建和谐社会，建立新型劳动关系作出巨大贡献。
                                     </div>
@@ -248,14 +250,14 @@
                                         <div class="circular"></div>
                                         <div class="name">12-30 华劳集团荣获“山东省儒商研究会优秀会员单位”荣誉称号！</div>
                                     </li>
-									<li>
-									    <div class="circular"></div>
-									    <div class="name">12-28 华劳集团总经理李永欣同志荣获“德州市人力资源服务领军人才”荣誉称号！</div>
-									</li>
-									<li>
-									    <div class="circular"></div>
-									    <div class="name">12-20 热烈庆祝华劳人力资源有限公司全国分公司总数达40家！</div>
-									</li>
+                                    <li>
+                                        <div class="circular"></div>
+                                        <div class="name">12-28 华劳集团总经理李永欣同志荣获“德州市人力资源服务领军人才”荣誉称号！</div>
+                                    </li>
+                                    <li>
+                                        <div class="circular"></div>
+                                        <div class="name">12-20 热烈庆祝华劳人力资源有限公司全国分公司总数达40家！</div>
+                                    </li>
                                     <li>
                                         <div class="circular"></div>
                                         <div class="name">12-16 华劳集团总经理李永欣同志荣获“德州市人力资源服务领军人才”称号！</div>
@@ -280,10 +282,10 @@
                                         <div class="circular"></div>
                                         <div class="name">10-24 安徽百企人力资源服务有限公司大观分公司成立</div>
                                     </li>
-									<li>
-									    <div class="circular"></div>
-									    <div class="name">10-15 刷活灵活用工平台正式上线！</div>
-									</li>
+                                    <li>
+                                        <div class="circular"></div>
+                                        <div class="name">10-15 刷活灵活用工平台正式上线！</div>
+                                    </li>
                                     <li>
                                         <div class="circular"></div>
                                         <div class="name">10-14 华劳集团三体系认证审核通过</div>
@@ -370,7 +372,7 @@
                                     </li>
                                     <li>
                                         <div class="circular"></div>
-                                        <div class="name">08-08 华劳人力资源有限公司上海分公司 成立</div>
+                                        <div class="name">08-08 华劳人力资源有限公司山东分公司 成立</div>
                                     </li>
                                     <li>
                                         <div class="circular"></div>
@@ -427,18 +429,18 @@
                                         <div class="circular"></div>
                                         <div class="name">07-14 华劳人力资源有限公司贵州分公司 成立</div>
                                     </li>
-									<li>
-									    <div class="circular"></div>
-									    <div class="name">06-28 安徽华劳人力资源服务有限公司嘉兴分公司成立</div>
-									</li>
-									<li>
-									    <div class="circular"></div>
-									    <div class="name">06-21 安徽百企人力资源服务有限公司安庆分公司成立</div>
-									</li>
-									<li>
-									    <div class="circular"></div>
-									    <div class="name">06-07 山东百业服务外包有限公司德州分公司成立</div>
-									</li>
+                                    <li>
+                                        <div class="circular"></div>
+                                        <div class="name">06-28 安徽华劳人力资源服务有限公司嘉兴分公司成立</div>
+                                    </li>
+                                    <li>
+                                        <div class="circular"></div>
+                                        <div class="name">06-21 安徽百企人力资源服务有限公司安庆分公司成立</div>
+                                    </li>
+                                    <li>
+                                        <div class="circular"></div>
+                                        <div class="name">06-07 山东百业服务外包有限公司德州分公司成立</div>
+                                    </li>
                                     <li>
                                         <div class="circular"></div>
                                         <div class="name">05-08 雇员工伤保护伞“雇工伞”产品上线</div>
@@ -447,21 +449,21 @@
                                         <div class="circular"></div>
                                         <div class="name">04-30 华劳集团总经理李永欣刊登为“儒商杂志封面人物”！</div>
                                     </li>
-									<li>
-									    <div class="circular"></div>
-									    <div class="name">02-17 安徽华劳人力资源服务有限公司成立</div>
-									</li>
-									<li>
-									    <div class="circular"></div>
-									    <div class="name">01-14 安徽百企人力资源服务有限公司成立</div>
-									</li>
+                                    <li>
+                                        <div class="circular"></div>
+                                        <div class="name">02-17 安徽华劳人力资源服务有限公司成立</div>
+                                    </li>
+                                    <li>
+                                        <div class="circular"></div>
+                                        <div class="name">01-14 安徽百企人力资源服务有限公司成立</div>
+                                    </li>
                                     <li class="active">
                                         <div class="circular"></div>
                                         <div class="name">2021</div>
                                     </li>
                                     <li>
                                         <div class="circular"></div>
-                                        <div class="name">11-17 上海华劳科技有限公司成立</div>
+                                        <div class="name">11-17 山东华劳科技有限公司成立</div>
                                     </li>
                                     <li>
                                         <div class="circular"></div>
@@ -707,7 +709,7 @@
                                     </li>
                                     <li>
                                         <div class="circular"></div>
-                                        <div class="name">11-17 &nbsp上海华劳科技有限公司成立</div>
+                                        <div class="name">11-17 &nbsp山东华劳科技有限公司成立</div>
                                     </li>
                                     <li>
                                         <div class="circular"></div>
@@ -998,7 +1000,7 @@
             </div>
             <div class="index-advantage-bottom-box2">
                 <div class="item">
-                    <div class="item-text">15年深耕人力资源服务业</div>
+                    <div class="item-text">12年深耕人力资源服务业</div>
                     <div class="item-circular">
                         <div class="item-circular-cir"></div>
                     </div>
@@ -1037,13 +1039,16 @@
                 </div>
                 <div class="inner-small-title text-center">华劳集团公司新闻、人力资源行业动态</div>
                 <div class="index-news-box">
-                    <portal:articles item="vo" order="post.create_time DESC" page="4" categoryIds="23" returnVarName="articles_data">
+                    <portal:articles item="vo" order="post.create_time DESC" page="4" categoryIds="23"
+                        returnVarName="articles_data">
                         <notempty name="$vo.thumbnail">
                             <notempty name="$vo.post_content">
                                 <div class="item">
 
-                                    <a href="{:cmf_url('portal/News/detail',array('id'=>$vo['id'],'cid'=>$vo['categories'][0]['id']))}">
-                                        <div class="title-bigger" style="background: url({:cmf_get_image_url($vo.thumbnail)}) center center no-repeat;background-size: 100% 100%;">
+                                    <a
+                                        href="{:cmf_url('portal/News/detail',array('id'=>$vo['id'],'cid'=>$vo['categories'][0]['id']))}">
+                                        <div class="title-bigger"
+                                            style="background: url({:cmf_get_image_url($vo.thumbnail)}) center center no-repeat;background-size: 100% 100%;">
                                             <div class="inner-box">
                                                 <div class="content">{$vo.post_title}</div>
                                             </div>
@@ -1052,7 +1057,8 @@
                                         <div class="time">{:date('Y/m/d',$vo.published_time)}</div>
                                         <div class="text hidden-xs">
                                             {$vo.post_content|htmlspecialchars_decode}</div>
-                                        <div class="more-btn"> <a href="{:cmf_url('portal/News/detail',array('id'=>$vo['id'],'cid'=>$vo['categories'][0]['id']))}">›
+                                        <div class="more-btn"> <a
+                                                href="{:cmf_url('portal/News/detail',array('id'=>$vo['id'],'cid'=>$vo['categories'][0]['id']))}">›
                                         </div>
                                     </a>
 
