--- a/public/themes/simpleboot3/portal/solution2.html
+++ b/public/themes/simpleboot3/portal/solution2.html
@@ -1,159 +1,182 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<include file="public@head"/>
-	</head>
-	<body>
-		<div id="solutions">
-			<div class="index-banner index-banner-top" style="width:100%;">
-				<div class="hidden-xs index-banner-img" style="background: url('__TMPL__/public/assets/style/img/solutions/banner.png') 0 0 no-repeat;background-size:  100% 100%;">
-					<div class="inner">
-						<div class="index-banner-box4">
-							<div class="index-banner-title">保洁用工风险解决方案</div>
-							<div class="index-banner-text"><span>转移劳动关系，规避社保稽查风险</span></div>
-							<div class="index-banner-text"><span>工伤0风险全面解决</span></div>
-							<div class="yuyue-btn">
-								<a href="{:cmf_url('portal/Form/index')}" title="预约方案">预约方案</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="hidden-lg hidden-md hidden-sm index-banner-img" style="background: url('__TMPL__/public/assets/style/img/contacts/moble_banner.png') 0 0 no-repeat;background-size:  100% 100%;">
-					<div class="inner">
-						<div class="index-banner-box4">
-							<div class="index-banner-title  text-center">保洁用工风险解决方案</div>
+
+<head>
+	<include file="public@head" />
+</head>
+
+<body>
+	<div id="solutions">
+		<div class="index-banner index-banner-top" style="width:100%;">
+			<div class="hidden-xs index-banner-img"
+				style="background: url('__TMPL__/public/assets/style/img/solutions/banner.png') 0 0 no-repeat;background-size:  100% 100%;">
+				<div class="inner">
+					<div class="index-banner-box4">
+						<div class="index-banner-title">保洁用工风险解决方案</div>
+						<div class="index-banner-text"><span>转移劳动关系，规避社保稽查风险</span></div>
+						<div class="index-banner-text"><span>工伤0风险全面解决</span></div>
+						<div class="yuyue-btn">
+							<a href="{:cmf_url('portal/Form/index')}" title="预约方案">预约方案</a>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="hidden-xs bg solutions">
+			<div class="hidden-lg hidden-md hidden-sm index-banner-img"
+				style="background: url('__TMPL__/public/assets/style/img/contacts/moble_banner.png') 0 0 no-repeat;background-size:  100% 100%;">
 				<div class="inner">
-					<div class="inner-bigger-title">
-						<div class="p1">面临的问题</div>
-					</div>
-					<div class="row solution-question" style="margin-left: 5px;">
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
-							<div class="solution-question-item text-center">
-								<img src="__TMPL__/public/assets/style/img/solutions2/question_1.svg" class="solution-question-item-img" />
-								<div class="solution-question-item-title">工伤风险高</div>
-								<div class="solution-question-item-text text-left">在实习生、退休返聘及一线临时性、辅助性、可替代性的岗位上，如保洁、保安用工人员存在社保不能缴纳但工伤风险普遍存在的问题，以及年龄偏大、自身基础疾病隐患，按照工伤保险条例，伤、残、亡会给企业带来巨大的经营风险隐患</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
-							<div class="solution-question-item text-center">
-								<img src="__TMPL__/public/assets/style/img/solutions2/question_2.svg" class="solution-question-item-img" />
-								<div class="solution-question-item-title">管理成本高</div>
-								<div class="solution-question-item-text text-left">劳动关系的制约下，劳动者既是劳动和创造价值的主体，同时也是企业的最重要生产成本，整个用工环节存在多项管理风险和成本，非核心岗位的管理工作占用大量的时间和精力</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-							<div class="solution-question-item text-center">
-								<img src="__TMPL__/public/assets/style/img/solutions2/question_3.svg" class="solution-question-item-img" />
-								<div class="solution-question-item-title">解决方案少</div>
-								<div class="solution-question-item-text text-left">金税四期、五证合一、社保入税政策趋于规范，劳动者权益高涨，如何做到财务合规、0工伤风险经营、经济和事务责任全部转移，从而发展企业核心业务是每个企业的终极之选</div>
-							</div>
-						</div>
-					</div>
-					<div class="solution-question-bottom text-center">
-						<p>为企业提供保险一站直达服务，便捷实现企业发展中所需的保障</p>
+					<div class="index-banner-box4">
+						<div class="index-banner-title  text-center">保洁用工风险解决方案</div>
 					</div>
 				</div>
 			</div>
-			<div class="hidden-lg hidden-md hidden-sm   bg solutions">
-				<div class="inner">
-					<div class="inner-bigger-title">
-						<div class="p1">面临的问题</div>
+		</div>
+		<div class="hidden-xs bg solutions">
+			<div class="inner">
+				<div class="inner-bigger-title">
+					<div class="p1">面临的问题</div>
+				</div>
+				<div class="row solution-question" style="margin-left: 5px;">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
+						<div class="solution-question-item text-center">
+							<img src="__TMPL__/public/assets/style/img/solutions2/question_1.svg"
+								class="solution-question-item-img" />
+							<div class="solution-question-item-title">工伤风险高</div>
+							<div class="solution-question-item-text text-left">
+								在实习生、退休返聘及一线临时性、辅助性、可替代性的岗位上，如保洁、保安用工人员存在社保不能缴纳但工伤风险普遍存在的问题，以及年龄偏大、自身基础疾病隐患，按照工伤保险条例，伤、残、亡会给企业带来巨大的经营风险隐患
+							</div>
+						</div>
 					</div>
-					<div class="solution-2">
-						<div class="solution-2-item active">
-							<div class="solution-2-item-top">
-								<div class="solution-2-item-title">工伤风险高</div>
-								<div class="icon-img"></div>
-							</div>
-							<div class="solution-2-item-box">
-								<div class="solution-2-item-text">在实习生、退休返聘及一线临时性、辅助性、可替代性的岗位上，如保洁、保安用工人员存在社保不能缴纳但工伤风险普遍存在的问题，以及年龄偏大、自身基础疾病隐患，按照工伤保险条例，伤、残、亡会给企业带来巨大的经营风险隐患</div>
-								<!-- <a href="{:cmf_url('portal/Solution/index',array('id'=>1))}">了解更多 >>></a> -->
-							</div>
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
+						<div class="solution-question-item text-center">
+							<img src="__TMPL__/public/assets/style/img/solutions2/question_2.svg"
+								class="solution-question-item-img" />
+							<div class="solution-question-item-title">管理成本高</div>
+							<div class="solution-question-item-text text-left">
+								劳动关系的制约下，劳动者既是劳动和创造价值的主体，同时也是企业的最重要生产成本，整个用工环节存在多项管理风险和成本，非核心岗位的管理工作占用大量的时间和精力</div>
 						</div>
-						<div class="solution-2-item">
-							<div class="solution-2-item-top">
-								<div class="solution-2-item-title">管理成本高</div>
-								<div class="icon-img"></div>
-							</div>
-							<div class="solution-2-item-box">
-								<div class="solution-2-item-text">劳动关系的制约下，劳动者既是劳动和创造价值的主体，同时也是企业的最重要生产成本，整个用工环节存在多项管理风险和成本，非核心岗位的管理工作占用大量的时间和精力</div>
-								<!-- <a href="{:cmf_url('portal/Solution/index',array('id'=>2))}">了解更多 >>></a> -->
-							</div>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+						<div class="solution-question-item text-center">
+							<img src="__TMPL__/public/assets/style/img/solutions2/question_3.svg"
+								class="solution-question-item-img" />
+							<div class="solution-question-item-title">解决方案少</div>
+							<div class="solution-question-item-text text-left">
+								金税四期、五证合一、社保入税政策趋于规范，劳动者权益高涨，如何做到财务合规、0工伤风险经营、经济和事务责任全部转移，从而发展企业核心业务是每个企业的终极之选</div>
 						</div>
-						<div class="solution-2-item">
-							<div class="solution-2-item-top">
-								<div class="solution-2-item-title">解决方案少</div>
-								<div class="icon-img"></div>
+					</div>
+				</div>
+				<div class="solution-question-bottom text-center">
+					<p>为企业提供保险一站直达服务，便捷实现企业发展中所需的保障</p>
+				</div>
+			</div>
+		</div>
+		<div class="hidden-lg hidden-md hidden-sm   bg solutions">
+			<div class="inner">
+				<div class="inner-bigger-title">
+					<div class="p1">面临的问题</div>
+				</div>
+				<div class="solution-2">
+					<div class="solution-2-item active">
+						<div class="solution-2-item-top">
+							<div class="solution-2-item-title">工伤风险高</div>
+							<div class="icon-img"></div>
+						</div>
+						<div class="solution-2-item-box">
+							<div class="solution-2-item-text">
+								在实习生、退休返聘及一线临时性、辅助性、可替代性的岗位上，如保洁、保安用工人员存在社保不能缴纳但工伤风险普遍存在的问题，以及年龄偏大、自身基础疾病隐患，按照工伤保险条例，伤、残、亡会给企业带来巨大的经营风险隐患
 							</div>
-							<div class="solution-2-item-box">
-								<div class="solution-2-item-text">金税四期、五证合一、社保入税政策趋于规范，劳动者权益高涨，如何做到财务合规、0工伤风险经营、经济和事务责任全部转移，从而发展企业核心业务是每个企业的终极之选</div>
-								<!-- <a href="{:cmf_url('portal/Solution/index',array('id'=>3))}">了解更多 >>></a> -->
-							</div>
+							<!-- <a href="{:cmf_url('portal/Solution/index',array('id'=>1))}">了解更多 >>></a> -->
+						</div>
+					</div>
+					<div class="solution-2-item">
+						<div class="solution-2-item-top">
+							<div class="solution-2-item-title">管理成本高</div>
+							<div class="icon-img"></div>
+						</div>
+						<div class="solution-2-item-box">
+							<div class="solution-2-item-text">
+								劳动关系的制约下，劳动者既是劳动和创造价值的主体，同时也是企业的最重要生产成本，整个用工环节存在多项管理风险和成本，非核心岗位的管理工作占用大量的时间和精力</div>
+							<!-- <a href="{:cmf_url('portal/Solution/index',array('id'=>2))}">了解更多 >>></a> -->
+						</div>
+					</div>
+					<div class="solution-2-item">
+						<div class="solution-2-item-top">
+							<div class="solution-2-item-title">解决方案少</div>
+							<div class="icon-img"></div>
+						</div>
+						<div class="solution-2-item-box">
+							<div class="solution-2-item-text">
+								金税四期、五证合一、社保入税政策趋于规范，劳动者权益高涨，如何做到财务合规、0工伤风险经营、经济和事务责任全部转移，从而发展企业核心业务是每个企业的终极之选</div>
+							<!-- <a href="{:cmf_url('portal/Solution/index',array('id'=>3))}">了解更多 >>></a> -->
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="bg solutions">
-				<div class="inner">
-					<div class="inner-bigger-title">
-						<div class="p1">解决方案架构</div>
+		</div>
+		<div class="bg solutions">
+			<div class="inner">
+				<div class="inner-bigger-title">
+					<div class="p1">解决方案架构</div>
+				</div>
+				<div class="row solution-architecture">
+					<div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
+						<div class="flex-box text-center solution-architecture-box">
+							<div class="solution-architecture-circle">劳动关系转移</div>
+							<div class="solution-architecture-circle">工伤风险承接</div>
+							<div class="solution-architecture-circle">全额增值税发票</div>
+						</div>
 					</div>
-					<div class="row solution-architecture">
-						<div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
-							<div class="flex-box text-center solution-architecture-box">
-								<div class="solution-architecture-circle">劳动关系转移</div>
-								<div class="solution-architecture-circle">工伤风险承接</div>
-								<div class="solution-architecture-circle">全额增值税发票</div>
-							</div>
-						</div>
-						<div class="col-lg-5 col-md-5 col-sm-5 col-xs-12" style="margin-top: 0.26rem;">
-							<div class="solution-architecture-text2">劳动关系转移，劳务费发票替代工资表，实现公司人员真空化；工资社保申报基数+个人申报金额事项全面解决；工伤事务由我方专业团队全面承接，工伤经济责任100%全部承担，企业零风险完美解决工伤风险。</div>
-						</div>
+					<div class="col-lg-5 col-md-5 col-sm-5 col-xs-12" style="margin-top: 0.26rem;">
+						<div class="solution-architecture-text2">
+							劳动关系转移，劳务费发票替代工资表，实现公司人员真空化；工资社保申报基数+个人申报金额事项全面解决；工伤事务由我方专业团队全面承接，工伤经济责任100%全部承担，企业零风险完美解决工伤风险。</div>
 					</div>
 				</div>
 			</div>
-			<div class="bgc solutions">
-				<div class="inner">
-					<div class="inner-bigger-title">
-						<div class="p1">方案价值</div>
+		</div>
+		<div class="bgc solutions">
+			<div class="inner">
+				<div class="inner-bigger-title">
+					<div class="p1">方案价值</div>
+				</div>
+				<div class="row solution-advantage">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
+						<div class="solution-advantage-item">
+							<img src="__TMPL__/public/assets/style/img/solutions2/advantage_1.svg"
+								class="solution-advantage-item-img" />
+							<div class="solution-advantage-item-bottom">
+								<div class="solution-advantage-item-bottom-title">降低运营成本</div>
+								<div class="solution-advantage-item-bottom-text">
+									工伤保险和雇主责任险以及意外险都无法100%涵盖企业应支付医疗待遇、伤残待遇和工亡待遇，更不会垫付工伤期间发生的各种费用，企业还需要承担很多的费用支出。</div>
+							</div>
+						</div>
 					</div>
-					<div class="row solution-advantage">
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
-							<div class="solution-advantage-item">
-								<img src="__TMPL__/public/assets/style/img/solutions2/advantage_1.svg" class="solution-advantage-item-img" />
-								<div class="solution-advantage-item-bottom">
-									<div class="solution-advantage-item-bottom-title">降低运营成本</div>
-									<div class="solution-advantage-item-bottom-text">工伤保险和雇主责任险以及意外险都无法100%涵盖企业应支付医疗待遇、伤残待遇和工亡待遇，更不会垫付工伤期间发生的各种费用，企业还需要承担很多的费用支出。</div>
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
+						<div class="solution-advantage-item">
+							<img src="__TMPL__/public/assets/style/img/solutions2/advantage_2.svg"
+								class="solution-advantage-item-img" />
+							<div class="solution-advantage-item-bottom">
+								<div class="solution-advantage-item-bottom-title">零风险</div>
+								<div class="solution-advantage-item-bottom-text">
+									工伤外包服务是贵公司人员的劳动关系、工资发放、工伤风险责任转移至我们公司，由第三方全部承担事务性和经济性风险责任。费用垫付：员工发生工伤后的所有费用100%由我公司承担并垫付。</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+						<div class="solution-advantage-item">
+							<img src="__TMPL__/public/assets/style/img/solutions2/advantage_3.svg"
+								class="solution-advantage-item-img" />
+							<div class="solution-advantage-item-bottom">
+								<div class="solution-advantage-item-bottom-title">节省管理成本</div>
+								<div class="solution-advantage-item-bottom-text">
+									事务性的劳动关系签订，入离职手续办理，工伤认定和伤残认定，家属方的沟通，诉讼或仲裁的出庭应诉答辩，工资发放和个税办理，增减员的手续全部由我公司承接，解放企业非核心事务的时间和精力的占用，节省管理成本。
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-6">
-							<div class="solution-advantage-item">
-								<img src="__TMPL__/public/assets/style/img/solutions2/advantage_2.svg" class="solution-advantage-item-img" />
-								<div class="solution-advantage-item-bottom">
-									<div class="solution-advantage-item-bottom-title">零风险</div>
-									<div class="solution-advantage-item-bottom-text">工伤外包服务是贵公司人员的劳动关系、工资发放、工伤风险责任转移至我们公司，由第三方全部承担事务性和经济性风险责任。费用垫付：员工发生工伤后的所有费用100%由我公司承担并垫付。</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-							<div class="solution-advantage-item">
-								<img src="__TMPL__/public/assets/style/img/solutions2/advantage_3.svg" class="solution-advantage-item-img" />
-								<div class="solution-advantage-item-bottom">
-									<div class="solution-advantage-item-bottom-title">节省管理成本</div>
-									<div class="solution-advantage-item-bottom-text">事务性的劳动关系签订，入离职手续办理，工伤认定和伤残认定，家属方的沟通，诉讼或仲裁的出庭应诉答辩，工资发放和个税办理，增减员的手续全部由我公司承接，解放企业非核心事务的时间和精力的占用，节省管理成本。</div>
-								</div>
-							</div>
-						</div>
 					</div>
 				</div>
 			</div>
-			<!-- <div class="bg solutions">
+		</div>
+		<!-- <div class="bg solutions">
 				<div class="inner">
 					<div class="inner-bigger-title">
 						<div class="p1">成功案例</div>
@@ -200,65 +223,67 @@
 					</div>
 				</div>
 			</div> -->
-			<div class="bg solutions">
-				<div class="inner">
-					<div class="inner-bigger-title">
-						<div class="p1">相关解决方案</div>
-					</div>
-					<div class="row solution-related">
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-							<div class="flex-box solution-related-item">
-								<div>
-									<div class="solution-related-item-title">国企和上市物业公司保洁用工解决方案</div>
-									<div class="solution-related-item-text hidden-xs">采用外包的模式把保洁业务领域的人力资源事务进行外包</div>
-									<div class="solution-related-item-btn">
-										<a href="{:cmf_url('portal/Solution/index',array('id'=>1))}" title="查看更多">查看更多</a>
-									</div>
-								</div>
-								<div>
-									<img src="__TMPL__/public/assets/style/img/solutions/related_1.svg" class="solution-related-item-img" />
+		<div class="bg solutions">
+			<div class="inner">
+				<div class="inner-bigger-title">
+					<div class="p1">相关解决方案</div>
+				</div>
+				<div class="row solution-related">
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+						<div class="flex-box solution-related-item">
+							<div>
+								<div class="solution-related-item-title">国企和上市物业公司保洁用工解决方案</div>
+								<div class="solution-related-item-text hidden-xs">采用外包的模式把保洁业务领域的人力资源事务进行外包</div>
+								<div class="solution-related-item-btn">
+									<a href="{:cmf_url('portal/Solution/index',array('id'=>1))}" title="查看更多">查看更多</a>
 								</div>
 							</div>
+							<div>
+								<img src="__TMPL__/public/assets/style/img/solutions/related_1.svg" class="solution-related-item-img" />
+							</div>
 						</div>
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-							<div class="flex-box solution-related-item">
-								<div>
-									<div class="solution-related-item-title">保洁人员招聘外包解决方案</div>
-									<div class="solution-related-item-text hidden-xs">依托华劳集团15年人力资源外包经验，海量的人才储备、庞大的招聘渠道、优秀的寻访能力</div>
-									<div class="solution-related-item-btn">
-										<a href="{:cmf_url('portal/Solution/index',array('id'=>3))}" title="查看更多">查看更多</a>
-									</div>
+					</div>
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+						<div class="flex-box solution-related-item">
+							<div>
+								<div class="solution-related-item-title">保洁人员招聘外包解决方案</div>
+								<div class="solution-related-item-text hidden-xs">依托华劳集团12年人力资源外包经验，海量的人才储备、庞大的招聘渠道、优秀的寻访能力</div>
+								<div class="solution-related-item-btn">
+									<a href="{:cmf_url('portal/Solution/index',array('id'=>3))}" title="查看更多">查看更多</a>
 								</div>
-								<div>
-									<img src="__TMPL__/public/assets/style/img/solutions/related_2.svg" class="solution-related-item-img2" />
-								</div>
+							</div>
+							<div>
+								<img src="__TMPL__/public/assets/style/img/solutions/related_2.svg"
+									class="solution-related-item-img2" />
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		
-		
-		<include file="public@footer"/>
-	</body>
-	<script type="text/javascript">
-		$(function(){
-			$(".solution-example .solution-example-imgs li").mouseover(function(){
-				$(".solution-example-left-img").attr("src",$(this).data("url"));
-				$(".solution-example .solution-example-imgs li").removeClass("active");
-				$(this).addClass("active");
-			})
-			$('.solution-2-item').on('click', function() {
-				var bol = $(this).hasClass('active');
-				$('.solution-2-item').removeClass('active');
-				if (bol) {
-					$(this).removeClass('active');
-				} else {
-					$(this).addClass('active');
-				}
-			
-			})
+	</div>
+
+
+	<include file="public@footer" />
+</body>
+<script type="text/javascript">
+	$(function () {
+		$(".solution-example .solution-example-imgs li").mouseover(function () {
+			$(".solution-example-left-img").attr("src", $(this).data("url"));
+			$(".solution-example .solution-example-imgs li").removeClass("active");
+			$(this).addClass("active");
 		})
-	</script>
+		$('.solution-2-item').on('click', function () {
+			var bol = $(this).hasClass('active');
+			$('.solution-2-item').removeClass('active');
+			if (bol) {
+				$(this).removeClass('active');
+			} else {
+				$(this).addClass('active');
+			}
+
+		})
+	})
+</script>
+
 </html>
