--- a/public/themes/simpleboot3/portal/wlw.html
+++ b/public/themes/simpleboot3/portal/wlw.html
@@ -62,7 +62,7 @@
         <div class="container">
             <div class="wlw_tit text-center wow bounceInDown">
                 <h1>物联网<em>4大特性</em></h1>
-                <p>真略科技专注于为各类大众应用提供有针对性的物联解决方案</p>
+                <p>一帆科技专注于为各类大众应用提供有针对性的物联解决方案</p>
             </div>
             <ul class="text-center wow flipInY">
                 <li class="col-md-3">
@@ -192,8 +192,8 @@
     <div class="slider_nav">
         <ul>
             <li class="ht">
-                <div class="ht1"><img src="__TMPL__/public/assets/static/picture/silder1.png" alt="上海APP开发400电话">
-                    <div class="ht2">18952265600</div>
+                <div class="ht1"><img src="__TMPL__/public/assets/static/picture/silder1.png" alt="山东APP开发400电话">
+                    <div class="ht2">13792208163</div>
                 </div>
             </li>
             <!--<li><a href="http://wpa.qq.com/msgrd?v=3&uin=603233758&site=qq&menu=yes" target="_blank"><img src="/templates/main/images/silder2.png" alt="QQ在线咨询"/></a></li>-->
@@ -201,7 +201,7 @@
                         alt="咨询项目经理"></a></li>
             <li class="wx">
                 <img src="__TMPL__/public/assets/static/picture/silder4.png">
-                <div class="code"><img src="__TMPL__/public/assets/static/picture/code1.png" alt="上海APP开发微信公众号"></div>
+                <div class="code"><img src="__TMPL__/public/assets/static/picture/code1.png" alt="山东APP开发微信公众号"></div>
             </li>
         </ul>
     </div>
