--- a/public/themes/simpleboot3/portal/xcx.html
+++ b/public/themes/simpleboot3/portal/xcx.html
@@ -7,9 +7,9 @@
     <link href="__TMPL__/public/assets/static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
     <link href="__TMPL__/public/assets/static/css/main.css" rel="stylesheet" type="text/css" media="all">
     <link href="__TMPL__/public/assets/static/css/animate.css" rel="stylesheet" type="text/css" media="all">
-    <title>上海小程序开发,上海小程序制作,上海小程序定制,上海微信小程序开发 - 上海真略科技</title>
-    <meta name="Keywords" content="上海小程序开发,上海小程序制作,上海小程序定制,上海微信小程序开发">
-    <meta name="Description" content="上海真略科技是一家集小程序开发,小程序制作,小程序定制,微信小程序开发定制的专业公司,专业为客户打造微信小程序开发一体化解决方案.">
+    <title>山东小程序开发,山东小程序制作,山东小程序定制,山东微信小程序开发 - 德州一帆科技</title>
+    <meta name="Keywords" content="山东小程序开发,山东小程序制作,山东小程序定制,山东微信小程序开发">
+    <meta name="Description" content="德州一帆科技是一家集小程序开发,小程序制作,小程序定制,微信小程序开发定制的专业公司,专业为客户打造微信小程序开发一体化解决方案.">
     <!--[if lt IE 9]>
  <script src="__TMPL__/public/assets/static/js/html5shiv.min.js"></script>
  <script src="__TMPL__/public/assets/static/js/respond.min.js"></script>
@@ -412,8 +412,8 @@
     <div class="slider_nav">
         <ul>
             <li class="ht">
-                <div class="ht1"><img src="__TMPL__/public/assets/static/picture/silder1.png" alt="上海APP开发400电话">
-                    <div class="ht2">18952265600</div>
+                <div class="ht1"><img src="__TMPL__/public/assets/static/picture/silder1.png" alt="山东APP开发400电话">
+                    <div class="ht2">13792208163</div>
                 </div>
             </li>
             <!--<li><a href="http://wpa.qq.com/msgrd?v=3&uin=603233758&site=qq&menu=yes" target="_blank"><img src="/templates/main/images/silder2.png" alt="QQ在线咨询"/></a></li>-->
@@ -421,7 +421,7 @@
                         alt="咨询项目经理"></a></li>
             <li class="wx">
                 <img src="__TMPL__/public/assets/static/picture/silder4.png">
-                <div class="code"><img src="__TMPL__/public/assets/static/picture/code1.png" alt="上海APP开发微信公众号"></div>
+                <div class="code"><img src="__TMPL__/public/assets/static/picture/code1.png" alt="山东APP开发微信公众号"></div>
             </li>
         </ul>
     </div>
