--- a/public/themes/simpleboot3/portal/ymline.html
+++ b/public/themes/simpleboot3/portal/ymline.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>网校系统,在线视频教育系统 - 上海真略</title>
+    <title>网校系统,在线视频教育系统 - 德州一帆</title>
     <link href="static/css/bootstrap_ykt.css" rel="stylesheet" type="text/css" media="all">
     <link href="static/css/course.css" rel="stylesheet" type="text/css" media="all">
     <link href="static/css/animate.css" rel="stylesheet" type="text/css" media="all">
@@ -12,7 +13,7 @@
     <script src="static/js/jquery.min.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
     <script type="text/javascript">
-        function nTabs(thisObj, Num) {
+        function nTabs (thisObj, Num) {
             if (thisObj.className == "active") return;
             var tabObj = thisObj.parentNode.id;
             var tabList = document.getElementById(tabObj).getElementsByTagName("li");
@@ -37,6 +38,7 @@
  <script src="/templates/main/js/respond.min.js"></script>
 <![endif]-->
 </head>
+
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
     <div class="psfxd fixed">
         <div class="container">
@@ -44,7 +46,8 @@
                 <a>
                     <img src="static/picture/logo_ykt.png" class="logo"></a>
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -122,7 +125,8 @@
                 </div>
             </li>
         </ul>
-        <div class="text-center"><a href="javascript:;" target="_blank" rel="nofollow" class="btn btn-success wow rubberBand">立即咨询</a></div>
+        <div class="text-center"><a href="javascript:;" target="_blank" rel="nofollow"
+                class="btn btn-success wow rubberBand">立即咨询</a></div>
     </div>
     <div class="easy_operate">
         <div class="container">
@@ -133,7 +137,8 @@
                     <p>可视化图表结合面板式管理后台，让网校的管理轻松高效</p>
                 </div>
                 <a href="javascript:;" target="_blank" rel="nofollow" class="btn btn-success wow rubberBand">立即咨询</a>
-                <a class="btn btn-primary com wow rubberBand" href="javascript:;" target="_blank" rel="nofollow">申请试用</a>
+                <a class="btn btn-primary com wow rubberBand" href="javascript:;" target="_blank"
+                    rel="nofollow">申请试用</a>
             </div>
             <div class="manage col-md-6 wow fadeInRightBig">
                 <ul class="col-md-6">
@@ -204,17 +209,23 @@
             <div class="col-md-4 new-pointer wow fadeInLeftBig">
                 <ul>
                     <li>
-                        <img src="static/picture/sq_ico1.png">直播课</li>
+                        <img src="static/picture/sq_ico1.png">直播课
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico2.png">作业练习</li>
+                        <img src="static/picture/sq_ico2.png">作业练习
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico3.png">录播课</li>
+                        <img src="static/picture/sq_ico3.png">录播课
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico4.png">课堂笔记</li>
+                        <img src="static/picture/sq_ico4.png">课堂笔记
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico5.png">约排课</li>
+                        <img src="static/picture/sq_ico5.png">约排课
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico6.png">互动答疑</li>
+                        <img src="static/picture/sq_ico6.png">互动答疑
+                    </li>
                 </ul>
             </div>
             <div class="col-md-8 new-pic wow fadeInRightBig">
@@ -231,17 +242,23 @@
             <div class="col-md-4 new-pointer">
                 <ul>
                     <li>
-                        <img src="static/picture/sq_ico1.png">直播课</li>
+                        <img src="static/picture/sq_ico1.png">直播课
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico2.png">作业练习</li>
+                        <img src="static/picture/sq_ico2.png">作业练习
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico3.png">录播课</li>
+                        <img src="static/picture/sq_ico3.png">录播课
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico4.png">课堂笔记</li>
+                        <img src="static/picture/sq_ico4.png">课堂笔记
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico5.png">约排课</li>
+                        <img src="static/picture/sq_ico5.png">约排课
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico6.png">互动答疑</li>
+                        <img src="static/picture/sq_ico6.png">互动答疑
+                    </li>
                 </ul>
             </div>
             <div class="col-md-8 new-pic">
@@ -258,17 +275,23 @@
             <div class="col-md-4 new-pointer">
                 <ul>
                     <li>
-                        <img src="static/picture/sq_ico1.png">直播课</li>
+                        <img src="static/picture/sq_ico1.png">直播课
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico2.png">作业练习</li>
+                        <img src="static/picture/sq_ico2.png">作业练习
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico3.png">录播课</li>
+                        <img src="static/picture/sq_ico3.png">录播课
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico4.png">课堂笔记</li>
+                        <img src="static/picture/sq_ico4.png">课堂笔记
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico5.png">约排课</li>
+                        <img src="static/picture/sq_ico5.png">约排课
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico6.png">互动答疑</li>
+                        <img src="static/picture/sq_ico6.png">互动答疑
+                    </li>
                 </ul>
             </div>
             <div class="col-md-8 new-pic">
@@ -285,17 +308,23 @@
             <div class="col-md-4 new-pointer">
                 <ul>
                     <li>
-                        <img src="static/picture/sq_ico1.png">直播课</li>
+                        <img src="static/picture/sq_ico1.png">直播课
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico2.png">作业练习</li>
+                        <img src="static/picture/sq_ico2.png">作业练习
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico3.png">录播课</li>
+                        <img src="static/picture/sq_ico3.png">录播课
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico4.png">课堂笔记</li>
+                        <img src="static/picture/sq_ico4.png">课堂笔记
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico5.png">约排课</li>
+                        <img src="static/picture/sq_ico5.png">约排课
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico6.png">互动答疑</li>
+                        <img src="static/picture/sq_ico6.png">互动答疑
+                    </li>
                 </ul>
             </div>
             <div class="col-md-8 new-pic">
@@ -312,17 +341,23 @@
             <div class="col-md-4 new-pointer">
                 <ul>
                     <li>
-                        <img src="static/picture/sq_ico1.png">直播课</li>
+                        <img src="static/picture/sq_ico1.png">直播课
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico2.png">作业练习</li>
+                        <img src="static/picture/sq_ico2.png">作业练习
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico3.png">录播课</li>
+                        <img src="static/picture/sq_ico3.png">录播课
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico4.png">课堂笔记</li>
+                        <img src="static/picture/sq_ico4.png">课堂笔记
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico5.png">约排课</li>
+                        <img src="static/picture/sq_ico5.png">约排课
+                    </li>
                     <li>
-                        <img src="static/picture/sq_ico6.png">互动答疑</li>
+                        <img src="static/picture/sq_ico6.png">互动答疑
+                    </li>
                 </ul>
             </div>
             <div class="col-md-8 new-pic">
@@ -417,7 +452,8 @@
         </div>
         <div class="container online_school">
             <div class="col-md-4 text-center wow fadeInLeftBig">
-                <img src="static/picture/app_mobile.png"></div>
+                <img src="static/picture/app_mobile.png">
+            </div>
             <div class="col-md-7 oslist">
                 <ul class="wow fadeInRightBig">
                     <li class="col-md-6" style="background: url(static/image/ap1.png) no-repeat left top;">
@@ -438,8 +474,10 @@
                     </li>
                 </ul>
                 <div>
-                    <a href="javascript:;" target="_blank" rel="nofollow" class="btn btn-success wow rubberBand">立即咨询</a>
-                    <a class="btn btn-primary com wow rubberBand" href="javascript:;" target="_blank" rel="nofollow">申请试用</a>
+                    <a href="javascript:;" target="_blank" rel="nofollow"
+                        class="btn btn-success wow rubberBand">立即咨询</a>
+                    <a class="btn btn-primary com wow rubberBand" href="javascript:;" target="_blank"
+                        rel="nofollow">申请试用</a>
                 </div>
             </div>
         </div>
@@ -451,28 +489,36 @@
     <div class="container">
         <ul class="good_partner wow pulse">
             <li class="col-md-3">
-                <img src="static/picture/jyhy1.png"><div class="txt">金融会计</div>
+                <img src="static/picture/jyhy1.png">
+                <div class="txt">金融会计</div>
             </li>
             <li class="col-md-3">
-                <img src="static/picture/jyhy2.png"><div class="txt">政府高校</div>
+                <img src="static/picture/jyhy2.png">
+                <div class="txt">政府高校</div>
             </li>
             <li class="col-md-3">
-                <img src="static/picture/jyhy3.png"><div class="txt">留学语言</div>
+                <img src="static/picture/jyhy3.png">
+                <div class="txt">留学语言</div>
             </li>
             <li class="col-md-3">
-                <img src="static/picture/jyhy4.png"><div class="txt">医学教育</div>
+                <img src="static/picture/jyhy4.png">
+                <div class="txt">医学教育</div>
             </li>
             <li class="col-md-3">
-                <img src="static/picture/jyhy5.png"><div class="txt">在线教育</div>
+                <img src="static/picture/jyhy5.png">
+                <div class="txt">在线教育</div>
             </li>
             <li class="col-md-3">
-                <img src="static/picture/jyhy6.png"><div class="txt">司法教育</div>
+                <img src="static/picture/jyhy6.png">
+                <div class="txt">司法教育</div>
             </li>
             <li class="col-md-3">
-                <img src="static/picture/jyhy7.png"><div class="txt">艺术教育</div>
+                <img src="static/picture/jyhy7.png">
+                <div class="txt">艺术教育</div>
             </li>
             <li class="col-md-3">
-                <img src="static/picture/jyhy8.png"><div class="txt">企业培训</div>
+                <img src="static/picture/jyhy8.png">
+                <div class="txt">企业培训</div>
             </li>
         </ul>
     </div>
@@ -482,8 +528,8 @@
             <p>更多资讯及时了解</p>
         </div>
         <div class="container">
-            <ul class="media_infor wow pulse">                
-                    
+            <ul class="media_infor wow pulse">
+
             </ul>
         </div>
     </div>
@@ -513,7 +559,8 @@
         <div class="container">
             <div class="col-md-6 wow fadeInLeftBig" id="about">
                 <h3>关于我们</h3>
-                <p>上海真略网络科技有限公司成立于2004年4月，注册资本100万。多年来，我们一直坚持利用强大的技术力量和丰富的市场推广经验作为后盾，利用自身丰富的信息资源、畅捷的信息渠道以及强大的推广力量，多层次的电子商务及电子政务服务，已经拥有稳定企业客户7000多家，政府客户400余家，并且和中国地区主要网络服务商建立起一个紧密的合作机制，为广大客户提供优质服务。</p>
+                <p>德州一帆网络科技有限公司成立于2004年4月，注册资本100万。多年来，我们一直坚持利用强大的技术力量和丰富的市场推广经验作为后盾，利用自身丰富的信息资源、畅捷的信息渠道以及强大的推广力量，多层次的电子商务及电子政务服务，已经拥有稳定企业客户7000多家，政府客户400余家，并且和中国地区主要网络服务商建立起一个紧密的合作机制，为广大客户提供优质服务。
+                </p>
             </div>
             <div class="col-md-6 contact_r wow fadeInRightBig" id="contact">
                 <h3>联系我们</h3>
@@ -524,13 +571,14 @@
                         QQ联系：23573</p>
                 </div>
                 <div class="col-md-7">
-                    <p>总部地址：上海静安区平型关路138号（近民和路） 金赢108创意广场银座18楼<br>
+                    <p>总部地址：山东静安区平型关路138号（近民和路） 金赢108创意广场银座18楼<br>
                         市场合作：zlla@zlla.cn</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="Copyright_lt">Copyright © 2019 All Rights Reserved 版权所有 ：上海真略网络科技有限公司   <a href="javascript:;" target="_blank" rel="nofollow">沪ICP备15021857号-4</a></div>
+    <div class="Copyright_lt">Copyright © 2019 All Rights Reserved 版权所有 ：德州一帆网络科技有限公司 <a href="javascript:;"
+            target="_blank" rel="nofollow">沪ICP备15021857号-4</a></div>
     <script src="static/js/wow.min.js"></script>
     <script>
         if (!(/msie [6|7|8|9]/i.test(navigator.userAgent))) {
@@ -538,4 +586,5 @@
         };
     </script>
 </body>
+
 </html>
