--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -1,3 +1,4 @@
+<taglib name="app\portal\taglib\Portal" />
 <div class="topbar">
     <div class="container">
         <p class="pull_left fiften">十五年核心团队 · 值得信赖</p>
@@ -24,7 +25,7 @@
                 <li><a href="{:cmf_url('portal/apps/wlw')}"><span>软件产品</span></a></li>
                 <li><a href="{:cmf_url('portal/apps/index')}"><span>APP开发</span></a></li>
                 <li><a href="{:cmf_url('portal/apps/xcx')}"><span>微信小程序开发</span></a></li>
-<!--                <li class="dropdown">
+                <!--                <li class="dropdown">
                     <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button"
                         aria-haspopup="true" aria-expanded="false"><span>产品与解决方案<em class="caret"></em></span></a>
                     <ul class="dropdown-menu">
@@ -53,7 +54,7 @@
                     <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button"
                         aria-haspopup="true" aria-expanded="false"><span>关于我们 <em class="caret"></em></span></a>
                     <ul class="dropdown-menu">
-                        <a href="gsjj.html" rel="nofollow">关于真略</a>
+                        <a href="gsjj.html" rel="nofollow">关于一帆</a>
                         <a href="contact.html" rel="nofollow">联系我们</a>
                     </ul>
                 </li> -->
