--- a/public/themes/simpleboot3/portal/contact.html
+++ b/public/themes/simpleboot3/portal/contact.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>联系我们 - 上海真略</title>
+    <title>联系我们 - 德州一帆</title>
     <meta name="keywords" content="联系我们">
     <meta name="description" content="">
     <meta name="description" content="">
@@ -20,27 +21,28 @@
   <script src="__TMPL__/public/assets/static/js/respond.min.js"></script>
 <![endif]-->
 </head>
+
 <body>
     <div id="position" class="none">
         <p>当前位置：<a href="index.html">网站首页</a> > <a>关于我们</a> > <a>联系我们</a></p>
     </div>
     <script type="text/javascript" src="__TMPL__/public/assets/static/js/jquery-1.11.2.min.js"></script>
     <include file="public@head" />
-<script type="text/javascript">
-$(document).ready(function(){
-	var navOffset=$("#nav").offset().top;
-	$(window).scroll(function(){
-		var scrollPos=$(window).scrollTop();
-		if(scrollPos >=navOffset){
-			$(".header_inner").addClass("navbar-fixed-top");
-		}else{
-			$(".header_inner").removeClass("navbar-fixed-top");
-		}
-	});
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var navOffset = $("#nav").offset().top;
+            $(window).scroll(function () {
+                var scrollPos = $(window).scrollTop();
+                if (scrollPos >= navOffset) {
+                    $(".header_inner").addClass("navbar-fixed-top");
+                } else {
+                    $(".header_inner").removeClass("navbar-fixed-top");
+                }
+            });
 
-});
-</script>
-<script type="text/javascript" src="__TMPL__/public/assets/static/js/dh.js"></script>
+        });
+    </script>
+    <script type="text/javascript" src="__TMPL__/public/assets/static/js/dh.js"></script>
 
     <script src="__TMPL__/public/assets/static/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="__TMPL__/public/assets/static/js/jquery.form.min.js"></script>
@@ -57,33 +59,40 @@ $(document).ready(function(){
     <div class="container">
         <div class="contact_zl">
             <div class="col-md-6 wow fadeInLeftBig">
-                <h3 class="shzl">上海真略网络科技有限公司</h3>
-                <h2>做产品，找真略<br>
+                <h3 class="shzl">德州一帆网络科技有限公司</h3>
+                <h2>做产品，找一帆<br>
                     让您的产品赢在起跑线上！</h2>
                 <div class="comline"></div>
-                <p class="add1">地址：上海静安区平型关路金赢108创意广场银座18楼</p>
-                <p class="pd en">Jinying, Pingxianguan Road, Jing 'an District, Shanghai 108 Creative Plaza Ginza 18th Floor</p>
+                <p class="add1">地址：山东静安区平型关路金赢108创意广场银座18楼</p>
+                <p class="pd en">Jinying, Pingxianguan Road, Jing 'an District, Shanghai 108 Creative Plaza Ginza 18th
+                    Floor</p>
                 <p class="pd zjzx">
                     咨询热线： <a href="tel:400-663-9990">400-663-9990</a><br>
                     网址：www.cnzlapp.com
                 </p>
                 <div class="pd ewm">
-                    <img src="__TMPL__/public/assets/static/picture/code1.png"><span>真略公众号</span>
+                    <img src="__TMPL__/public/assets/static/picture/code1.png"><span>一帆公众号</span>
                 </div>
                 <p class="pd zxtel">产品咨询热线：<strong><a href="tel:400-663-9990">400-663-9990</a></strong></p>
             </div>
-        <form id="feedback_form" name="feedback_form" url="/plugins/feedback/ajax.ashx?action=add&site=main">
-            <div class="col-md-6 wow fadeInRight">
-                <h2>给我们留言</h2>
-                <p class="need">如果有需求请花几分钟时间在下边表格上填妥需求信息，我们将针 对您的需求与您取得联系~</p>
-                <input type="text" id="txtUserName" name="txtUserName" maxlength="4" placeholder="请输入您的联系姓名" class="text">
-                <input type="text" id="txtUserTel" name="txtUserTel" maxlength="11" placeholder="请输入您的联系方式" class="text">
-                <textarea class="text" id="txtContent" name="txtContent" maxlength="50" placeholder="详细描述您的需求..."></textarea>
-                <div class="yzm"><input id="txtCode" name="txtCode" type="text" maxlength="4" class="text" placeholder="验证码"><a href="javascript:;" onclick="ToggleCode(this, '/tools/verify_code.ashx');return false;" class="code">
-                        <img src="__TMPL__/public/assets/static/picture/verify_code.ashx" width="80" height="35" align="absmiddle"></a><span class="Validform_checktip"></span></div>
-                <input type="submit" value="立即提交" id="btnSubmit" name="btnSubmit" class="submit">
-            </div>
-        </form>
+            <form id="feedback_form" name="feedback_form" url="/plugins/feedback/ajax.ashx?action=add&site=main">
+                <div class="col-md-6 wow fadeInRight">
+                    <h2>给我们留言</h2>
+                    <p class="need">如果有需求请花几分钟时间在下边表格上填妥需求信息，我们将针 对您的需求与您取得联系~</p>
+                    <input type="text" id="txtUserName" name="txtUserName" maxlength="4" placeholder="请输入您的联系姓名"
+                        class="text">
+                    <input type="text" id="txtUserTel" name="txtUserTel" maxlength="11" placeholder="请输入您的联系方式"
+                        class="text">
+                    <textarea class="text" id="txtContent" name="txtContent" maxlength="50"
+                        placeholder="详细描述您的需求..."></textarea>
+                    <div class="yzm"><input id="txtCode" name="txtCode" type="text" maxlength="4" class="text"
+                            placeholder="验证码"><a href="javascript:;"
+                            onclick="ToggleCode(this, '/tools/verify_code.ashx');return false;" class="code">
+                            <img src="__TMPL__/public/assets/static/picture/verify_code.ashx" width="80" height="35"
+                                align="absmiddle"></a><span class="Validform_checktip"></span></div>
+                    <input type="submit" value="立即提交" id="btnSubmit" name="btnSubmit" class="submit">
+                </div>
+            </form>
         </div>
     </div>
     <div class="comline"></div>
@@ -100,29 +109,32 @@ $(document).ready(function(){
             </li>
             <li class="col-md-3">
                 <div class="main"><a href="tel:400-663-9990">
-                    <div class="pic">
-                        <img src="__TMPL__/public/assets/static/picture/tel.jpg">
-                    </div>
-                    <div class="line"></div>
-                    <div class="title">产品研发咨询，免费电话</div></a>
+                        <div class="pic">
+                            <img src="__TMPL__/public/assets/static/picture/tel.jpg">
+                        </div>
+                        <div class="line"></div>
+                        <div class="title">产品研发咨询，免费电话</div>
+                    </a>
                 </div>
             </li>
             <li class="col-md-3">
                 <div class="main"><a href="javascript:;" target="_blank">
-                    <div class="pic">
-                        <img src="__TMPL__/public/assets/static/picture/qq.jpg">
-                    </div>
-                    <div class="line"></div>
-                    <div class="title"></div></a>
+                        <div class="pic">
+                            <img src="__TMPL__/public/assets/static/picture/qq.jpg">
+                        </div>
+                        <div class="line"></div>
+                        <div class="title"></div>
+                    </a>
                 </div>
             </li>
             <li class="col-md-3">
                 <div class="main"><a href="86.html" target="_blank">
-                    <div class="pic">
-                        <img src="__TMPL__/public/assets/static/picture/see.png">
-                    </div>
-                    <div class="line"></div>
-                    <div class="title">真略产品案例浏览</div></a>
+                        <div class="pic">
+                            <img src="__TMPL__/public/assets/static/picture/see.png">
+                        </div>
+                        <div class="line"></div>
+                        <div class="title">一帆产品案例浏览</div>
+                    </a>
                 </div>
             </li>
         </ul>
@@ -157,22 +169,25 @@ $(document).ready(function(){
         <ul>
             <li class="ht">
                 <div class="ht1">
-                    <img src="__TMPL__/public/assets/static/picture/silder1.png" alt="上海APP开发400电话"><div class="ht2">400-663-9990</div>
+                    <img src="__TMPL__/public/assets/static/picture/silder1.png" alt="山东APP开发400电话">
+                    <div class="ht2">400-663-9990</div>
                 </div>
             </li>
             <li><a href="javascript:;" target="_blank">
-                <img src="__TMPL__/public/assets/static/picture/silder2.png" alt="QQ在线咨询"></a></li>
+                    <img src="__TMPL__/public/assets/static/picture/silder2.png" alt="QQ在线咨询"></a></li>
             <li><a href="javascript:;" target="_blank" rel="nofollow">
-                <img src="__TMPL__/public/assets/static/picture/silder3.png" alt="咨询项目经理"></a></li>
+                    <img src="__TMPL__/public/assets/static/picture/silder3.png" alt="咨询项目经理"></a></li>
             <li class="wx">
                 <img src="__TMPL__/public/assets/static/picture/silder4.png">
                 <div class="code">
-                    <img src="__TMPL__/public/assets/static/picture/code1.png" alt="上海APP开发微信公众号"></div>
+                    <img src="__TMPL__/public/assets/static/picture/code1.png" alt="山东APP开发微信公众号">
+                </div>
             </li>
         </ul>
     </div>
-    <include file="public@footer"/>
-    <script type="text/javascript"> var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8be54612433c604c0b4a06a117cdd627' type='text/javascript'%3E%3C/script%3E")) </script>
+    <include file="public@footer" />
+    <script
+        type="text/javascript"> var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8be54612433c604c0b4a06a117cdd627' type='text/javascript'%3E%3C/script%3E")) </script>
     <script src="__TMPL__/public/assets/static/js/Bmap.js"></script>
     <script src="__TMPL__/public/assets/static/js/wow.min.js"></script>
     <script>
@@ -180,7 +195,9 @@ $(document).ready(function(){
             new WOW().init();
         };
     </script>
-    <script type="text/javascript"> var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8be54612433c604c0b4a06a117cdd627' type='text/javascript'%3E%3C/script%3E")) </script>
+    <script
+        type="text/javascript"> var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8be54612433c604c0b4a06a117cdd627' type='text/javascript'%3E%3C/script%3E")) </script>
     <script src="__TMPL__/public/assets/static/js/dh.js"></script>
 </body>
+
 </html>
