--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -10,8 +10,7 @@
     <link href="__TMPL__/public/assets/static/css/swiper.css" rel="stylesheet" type="text/css" media="all">
     <title>德州一帆-{$site_info.site_name|default=''}</title>
     <meta name="keywords" content="{$site_info.site_seo_keywords|default=''}">
-    <meta name="description"
-        content="{$site_info.site_seo_description|default=''}">
+    <meta name="description" content="{$site_info.site_seo_description|default=''}">
     <link rel="canonical" href="">
     <!--[if lt IE 9]>
      <script src="__TMPL__/public/assets/static/js/html5shiv.min.js"></script>
@@ -21,7 +20,7 @@
 
 <body>
     <div id="position" class="none">
-        <p>当前位置：<a href="index.html">网站首页</a></p>
+        <p>当前位置：<a href="{:cmf_url('portal/Index/index')}">网站首页</a></p>
     </div>
     <script type="text/javascript" src="__TMPL__/public/assets/static/js/jquery-1.11.2.min.js"></script>
     <include file="public@head" />
@@ -47,7 +46,7 @@
     <div class="swiper-container">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <img src="__TMPL__/public/assets/static/picture/banner01.jpg" alt="上海真略：不只是APP开发，更是理念">
+                <img src="__TMPL__/public/assets/static/picture/banner01.jpg" alt="德州一帆：不只是APP开发，更是理念">
             </div>
         </div>
         <div class="swiper-pagination"></div>
@@ -56,9 +55,9 @@
         <div class="index_tit wow bounceInDown">
             <img src="__TMPL__/public/assets/static/picture/tit1.png">
             <h4>产品定位 + 视觉设计 + 代码实现 + 产品上线</h4>
-            <p class="p1">真略科技是一家立足上海APP定制开发企业<br>
-                上海真略网络科技有限公司，总部位于上海，立足长三角，服务全国，专注产品设计与研发，为客户提供产品定位、视觉设计、程序开发与产品上线的一站式产品设计与研发服务
-                。15年里，我们已经帮助几千家企业成功创建品牌产品，重塑品牌价值 。</p>
+            <p class="p1">一帆科技是一家立足山东APP定制开发企业<br>
+                德州一帆网络科技有限公司，总部位于山东，立足齐鲁，服务全国，专注产品设计与研发，为客户提供产品定位、视觉设计、程序开发与产品上线的一站式产品设计与研发服务
+                。12年里，我们已经帮助几千家企业成功创建品牌产品，重塑品牌价值 。</p>
         </div>
     </div>
     <div class="data_box">
@@ -66,7 +65,7 @@
             <ul class="wow pulse">
                 <li class="col-md-3">
                     <h3>15+</h3>
-                    <p>15年不改初衷<br>
+                    <p>12年不改初衷<br>
                         一直专注软件设计与研发</p>
                 </li>
                 <li class="col-md-3">
@@ -90,73 +89,30 @@
     <div class="comline"></div>
     <div class="container">
         <div class="index_tit wow bounceInDown">
-            <h5>已有<em>819</em> 家企业从真略得到了满意的产品设计研发服务</h5>
+            <h5>已有<em>819</em> 家企业从一帆得到了满意的产品设计研发服务</h5>
             <h5>几乎<i>覆盖全行业</i> 的APP开发经验</h5>
         </div>
     </div>
     <div class="case_contair">
         <ul class="wow pulse">
 
-            <li class="col-md-3"><a href="show-996.html" target="_blank">
-                    <div class="clist">
-                        <h3>史志办</h3>
-                    </div>
-                    <img src="__TMPL__/public/assets/static/picture/202109081801378237.jpg" alt="史志办">
-                </a></li>
-
-            <li class="col-md-3"><a href="show-995.html" target="_blank">
-                    <div class="clist">
-                        <h3>博汇集团</h3>
-                    </div>
-                    <img src="__TMPL__/public/assets/static/picture/202109081754239447.jpg" alt="博汇集团">
-                </a></li>
-
-            <li class="col-md-3"><a href="show-994.html" target="_blank">
-                    <div class="clist">
-                        <h3>博悦检测</h3>
-                    </div>
-                    <img src="__TMPL__/public/assets/static/picture/202109081750181101.jpg" alt="博悦检测">
-                </a></li>
-
-            <li class="col-md-3"><a href="show-992.html" target="_blank">
-                    <div class="clist">
-                        <h3>红跑车</h3>
-                    </div>
-                    <img src="__TMPL__/public/assets/static/picture/202109021610431999.jpg" alt="红跑车">
-                </a></li>
-
-            <li class="col-md-3"><a href="show-991.html" target="_blank">
-                    <div class="clist">
-                        <h3>车必净</h3>
-                    </div>
-                    <img src="__TMPL__/public/assets/static/picture/202109021608223156.jpg" alt="车必净">
-                </a></li>
-
-            <li class="col-md-3"><a href="show-990.html" target="_blank">
-                    <div class="clist">
-                        <h3>博汇智能装备</h3>
-                    </div>
-                    <img src="__TMPL__/public/assets/static/picture/202109021607124545.jpg" alt="博汇智能装备">
-                </a></li>
-
-            <li class="col-md-3"><a href="show-927.html" target="_blank">
-                    <div class="clist">
-                        <h3>慕容APP</h3>
-                    </div>
-                    <img src="__TMPL__/public/assets/static/picture/202007181344099021.jpg" alt="慕容APP">
-                </a></li>
-
-            <li class="col-md-3"><a href="show-926.html" target="_blank">
-                    <div class="clist">
-                        <h3>展超商城</h3>
-                    </div>
-                    <img src="__TMPL__/public/assets/static/picture/202007181341379744.jpg" alt="展超商城">
-                </a></li>
-
+            <portal:articles item="vo" order="post.create_time DESC" page="8" categoryIds="24"
+                returnVarName="articles_data">
+                <notempty name="$vo.thumbnail">
+                    <li class="col-md-3"><a
+                            href="{:url('portal/Article/index',array('id'=>$vo.id,'cid'=>$vo['categories'][0]['id']))}"
+                            target="_blank">
+                            <div class="clist">
+                                <h3>{$vo.post_title}</h3>
+                            </div>
+                            <img src="{:cmf_get_image_url($vo.thumbnail)}" alt="{$vo.post_title}">
+                        </a></li>
+                </notempty>
+            </portal:articles>
 
         </ul>
         <div class="text-center">
-            <a href="86.html" class="btns btn_more wow rubberBand">+ 更多案例</a>
+            <a href="{:cmf_url('portal/apps/suc')}" class="btns btn_more wow rubberBand">+ 更多案例</a>
         </div>
     </div>
     <div class="container">
@@ -217,7 +173,7 @@
     <div class="plann_principles">
         <div class="container">
             <div class="index_tit wow bounceInDown">
-                <h4 class="wl">真略APP全案策划的3大原则</h4>
+                <h4 class="wl">一帆APP全案策划的3大原则</h4>
                 <p class="p2">创意虽重要，原则价更高<br>多年来我们一直坚守，不改初衷</p>
             </div>
             <ul class="wow pulse">
@@ -573,8 +529,8 @@
     <div class="slider_nav">
         <ul>
             <li class="ht">
-                <div class="ht1"><img src="__TMPL__/public/assets/static/picture/silder1.png" alt="上海APP开发400电话">
-                    <div class="ht2">18952265600</div>
+                <div class="ht1"><img src="__TMPL__/public/assets/static/picture/silder1.png" alt="山东APP开发400电话">
+                    <div class="ht2">13792208163</div>
                 </div>
             </li>
             <!--<li><a href="http://wpa.qq.com/msgrd?v=3&uin=603233758&site=qq&menu=yes" target="_blank"><img src="/templates/main/images/silder2.png" alt="QQ在线咨询"/></a></li>-->
@@ -582,7 +538,7 @@
                         alt="咨询项目经理"></a></li>
             <li class="wx">
                 <img src="__TMPL__/public/assets/static/picture/silder4.png">
-                <div class="code"><img src="__TMPL__/public/assets/static/picture/code1.png" alt="上海APP开发微信公众号"></div>
+                <div class="code"><img src="__TMPL__/public/assets/static/picture/code1.png" alt="山东APP开发微信公众号"></div>
             </li>
         </ul>
     </div>
