--- a/public/themes/simpleboot3/public/footer.html
+++ b/public/themes/simpleboot3/public/footer.html
@@ -4,43 +4,27 @@
             <div class="branch_office">
                 <ul class="fl col-md-8">
                     <li>
-                        <img src="__TMPL__/public/assets/static/picture/foot1.png" alt="上海总公司">
+                        <img src="__TMPL__/public/assets/static/picture/foot1.png" alt="山东总公司">
                         <div class="info">
-                            <h3>上海总公司</h3>
-                            <p>办公地址：上海静安区平型关路金赢108创意广场银座18楼</p>
+                            <h3>山东总公司</h3>
+                            <p>办公地址：山东静安区平型关路金赢108创意广场银座18楼</p>
                             <p>
-                                咨询电话：18952265600<br>
+                                咨询电话：13792208163<br>
 
                             </p>
                         </div>
                     </li>
-                    <li>
-                        <img src="__TMPL__/public/assets/static/picture/foot3.png" alt="徐州分公司">
-                        <h3>徐州分公司</h3>
-                        <p>办公地址：江苏省徐州市鼓楼区中山北路226号鼓楼广场C座19F</p>
-                        <p>
-                            咨询电话：0516-85645808<br>
 
-                        </p>
-                    </li>
-                    <li>
-                        <img src="__TMPL__/public/assets/static/picture/foot2.png" alt="南通分公司">
-                        <h3>南通分公司</h3>
-                        <p>办公地址：江苏省南通市崇川区崇川路58号</p>
-                        <p>
-                            咨询电话：18952265600<br>
-
-                        </p>
-                    </li>
                 </ul>
                 <div class="tel" class="col-md-4">
                     <p>客服电话</p>
-                    <h3>18952265600</h3>
-                    <p>投诉及24小时值班电话</p>
-                    <h3>18952161000</h3>
+                    <h3>13792208163</h3>
+
                     <ul>
                         <li>
-                            <img src="__TMPL__/public/assets/static/picture/foot_ico1.png" class="t1"><img src="__TMPL__/public/assets/static/picture/code1.png" class="t2" alt="上海真略微信公众号二维码"></li>
+                            <img src="__TMPL__/public/assets/static/picture/foot_ico1.png" class="t1"><img
+                                src="__TMPL__/public/assets/static/picture/code1.png" class="t2" alt="德州一帆微信公众号二维码">
+                        </li>
 
                     </ul>
                 </div>
@@ -48,13 +32,22 @@
         </div>
     </div>
     <div class="footer_bottom">
-        <div class="container copright">Copyright &copy; 2019 All Rights Reserved  版权所有 ：上海真略网络科技有限公司   <a href="javascript:;" target="_blank" rel="nofollow">沪ICP备15021857号-4</a></div>
-        <div class="container copright">上海真略作为<a href="index.html">APP开发</a>领先品牌，多年来已为上百家上海企业提供高品质的移动应用解决方案及服务。欢迎来电咨询！<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://"); document.write(unescape("%3Cspan id='cnzz_stat_icon_1256883526'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1256883526%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script></div>
+        <div class="container copright">Copyright &copy; 2019 All Rights Reserved 版权所有 ：德州一帆网络科技有限公司 <a
+                href="javascript:;" target="_blank" rel="nofollow">沪ICP备15021857号-4</a></div>
+        <div class="container copright">德州一帆作为<a href="index.html">APP开发</a>领先品牌，多年来已为上百家山东企业提供高品质的移动应用解决方案及服务。欢迎来电咨询！
+            <script
+                type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://"); document.write(unescape("%3Cspan id='cnzz_stat_icon_1256883526'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1256883526%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
+        </div>
     </div>
     <div class="clear"></div>
 </footer>
 
 
 <div style="width:300px;margin:0 auto; padding:20px 0;">
-    <a target="_blank" href="javascript:;" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="__TMPL__/public/assets/static/picture/batubiao.png" style="float:left;"><p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">沪公网安备 31010602004925号</p></a>
+    <a target="_blank" href="javascript:;"
+        style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img
+            src="__TMPL__/public/assets/static/picture/batubiao.png" style="float:left;">
+        <p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">沪公网安备 31010602004925号
+        </p>
+    </a>
 </div>
